検索サジェスト非表示を追加。

--- a/Yahooリアルタイム検索_カスタムcss.css
+++ b/Yahooリアルタイム検索_カスタムcss.css
@@ -285,3 +285,9 @@ a.MuteList_button__hHBBX {
 article.SensitiveMask_SensitiveMask__I1xS9 {
     background-color: #666666;
 }
+
+
+/* 検索サジェスト */
+.SearchAssist_SearchAssist___7dyR {
+    display: none;
+}
